--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,7 @@
 // Mixins
 
 @mobile: ~'(max-width: 500px)';
+@tablet: ~'(max-width: 900px)';
 
 .flex(@justify, @align) {
   display: flex;
